Source/WebCore/css/BasicShapeFunctions.h
@@ -40,11 +40,12 @@ class CSSPrimitiveValue;
 class CSSToLengthConversionData;
 class CSSValue;
 class RenderStyle;
+class RenderView;
 
 PassRefPtr<CSSValue> valueForBasicShape(const RenderStyle*, const BasicShape*);
 PassRefPtr<BasicShape> basicShapeForValue(const CSSToLengthConversionData&, const CSSBasicShape*);
 
-float floatValueForCenterCoordinate(const BasicShapeCenterCoordinate&, float);
+float floatValueForCenterCoordinate(const BasicShapeCenterCoordinate&, float, RenderView*);
 }
 
 #endif
